# r5r_ms_rs

./: .gitignore  Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs  ms_config.rs  responces.rs  responses.rs  server.rs  utils.rs
src/: main.rs  server_list.rs
src/database/: database.rs  mod.rs
src/endpoints/: bans.rs  eula.rs  list.rs  mod.rs  post.rs
src/endpoints/panel/: config.rs  list.rs  login.rs  main.rs  mod.rs  player_moderation.rs  server_management.rs
src/endpoints/servers/: list.rs  mod.rs  post.rs
src/javascript/: identifier_management.js  login.js  ms_post.js  private_list.js  server_management.js
src/middleware/: auth.rs
src/utils/: utils.rs  wrappers.rs
src/wrappers/: mod.rs  private.rs  public.rs
