[package]
name = "r5r_ms_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features]
#secret_sauce = ["dep:secret_sauce"]

[dependencies]
#secret_sauce = { path = "../secret_sauce", optional = true }

shared = { path = "shared" }
actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20.9"
rustls-pemfile = "1.0.3"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
debug_print = "1.0.0"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

