[package]
name = "r5r_ms_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[features]
#secret_sauce = ["dep:secret_sauce"]

[dependencies]
secret_sauce = { path = "../secret_sauce", optional = true }

shared = { path = "shared" }
actix-web = { version = "4", default-features = false, features = ["rustls", "macros"] }

rustls = "0.20.9"
rustls-pemfile = "1.0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

parking_lot = "0.12.1"

once_cell = "1.18.0"

chrono = { version = "0.4.*", features = ["serde"] }
sqlx = { version = "0.7.*", default-features = false, features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde",
]
