[package]
name = "r5r_ms_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
secret_sauce = ["dep:secret_sauce"]
default = ["secret_sauce"]

[dependencies]
secret_sauce = { path = "../secret_sauce", optional = true }
shared = { path = "shared" }

parking_lot = "0.12"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"]}
futures = "0.3"

actix-web = { version = "4", default-features = false, features = ["rustls-0_21", "macros"] }
actix-files = "0.*"
actix-session = { version = "0.*", features = ["cookie-session"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }

#Actix currently does not support 0.22
rustls = "0.21"
rustls-pemfile = "1"

argon2 = "0.5"
ring = "0.17"

maud = { version = "0.25", features = ["actix-web"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

uuid = {version = "1.6", features = ["v4", "fast-rng", "serde"]}
